Fix scrollbar issue #22

--- a/src/components/nav/sideNav/sideNavStyles.css
+++ b/src/components/nav/sideNav/sideNavStyles.css
@@ -4,7 +4,7 @@
     position: fixed;
     background-color: #f7f7f7 ;
     min-width: 280px;
-    min-height: 100vh;
+    height: 100vh;
     box-shadow: 0px 0px 20px #000000;
     transition-duration: 0.3s;
     left: -300px;   
@@ -12,6 +12,7 @@
     font-family: var(--mainFont);
     font-weight: bold;
     color: var(--fontColor);
+    overflow: auto;
 }
 
 .navItem {
